funcao ingredientes por venda
